--- a/PlanetbaseFramework.csproj
+++ b/PlanetbaseFramework.csproj
@@ -70,21 +70,25 @@
     <Compile Include="ContinueGameTitleButton.cs" />
     <Compile Include="FrameworkMod.cs" />
     <Compile Include="GameStateTitleReplacement.cs" />
-    <Compile Include="ImportOBJ.cs" />
     <Compile Include="ModBase.cs" />
     <Compile Include="LoadGameTitleButton.cs" />
     <Compile Include="ModListGameState.cs" />
     <Compile Include="Modloader.cs" />
     <Compile Include="NewGameTitleButton.cs" />
+    <Compile Include="OBJLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuitTitleButton.cs" />
     <Compile Include="SettingsTitleButton.cs" />
+    <Compile Include="TextureLoader.cs" />
     <Compile Include="TitleButton.cs" />
     <Compile Include="TutorialTitleButton.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="assets\png\error.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
