--- a/PlanetbaseFramework.csproj
+++ b/PlanetbaseFramework.csproj
@@ -49,16 +49,15 @@
     <DelaySign>false</DelaySign>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Assembly-CSharp">
+    <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Planetbase\Planetbase_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Planetbase\Planetbase_Data\Managed\UnityEngine.dll</HintPath>
@@ -73,12 +72,14 @@
     <Compile Include="LoadGameTitleButton.cs" />
     <Compile Include="ModListGameState.cs" />
     <Compile Include="Modloader.cs" />
+    <Compile Include="ModLoaderIgnoreAttribute.cs" />
     <Compile Include="NewGameTitleButton.cs" />
     <Compile Include="OBJLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuitTitleButton.cs" />
     <Compile Include="SettingsTitleButton.cs" />
     <Compile Include="BaseModuleType.cs" />
+    <Compile Include="StringFile.cs" />
     <Compile Include="TitleButton.cs" />
     <Compile Include="TutorialTitleButton.cs" />
     <Compile Include="Utils.cs" />
@@ -87,7 +88,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="assets\png\error.png" />
+    <None Include="assets\png\error.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="assets\strings\framework_en.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
