--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Lib.Harmony" version="1.2.0.1" targetFramework="net35" />
+  <package id="Mono.Cecil" version="0.9.6.4" targetFramework="net35" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net35" />
 </packages>
