--- a/PlanetbaseFramework.csproj
+++ b/PlanetbaseFramework.csproj
@@ -96,6 +96,7 @@
     <Compile Include="GameMechanics\Prefabs\ResourceTypePrefabLoader.cs" />
     <Compile Include="Patches\Planetbase\AnnouncementManager\DownloadThreadPatch.cs" />
     <Compile Include="Patches\Planetbase\GameManager\Update.cs" />
+    <Compile Include="Patches\Planetbase\GameStateSettings\IsValidResolutionPatch.cs" />
     <Compile Include="Patches\Planetbase\ModuleType\ReplacementLogic.cs" />
     <Compile Include="Patches\Planetbase\Module\GetRadiusPatch.cs" />
     <Compile Include="Patches\Planetbase\Module\GetSizeFactorPatch.cs" />
